# qc-osi-trace

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
example_config/: config-customrules.xml  config-errors.xml  config-missingversion.xml  config-noversion.xml  config.xml  example_sv_trace.osi
qc_ositrace/: __main__.py  constants.py  main.py
qc_ositrace/checks/: __init__.py
qc_ositrace/checks/deserialization/: __init__.py  deserialization_checker.py  deserialization_constants.py
qc_ositrace/checks/osirules/: __init__.py  osirules_checker.py  osirules_constants.py
qc_ositrace/checks/osirules/rulesyml/: osi_3_2_0.yml  osi_3_3_1.yml  osi_3_4_0.yml  osi_3_5_0.yml  osi_3_6_0.yml  osi_3_7_0.yml
tests/: test_deserialization_checks.py  test_osirules_checks.py  test_setup.py
tests/data/customrules/: customrules.yml
tests/data/deserialization_version_is_set/: deserialization_version_is_set_invalid.osi
